<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice</string>
    <string name="action_settings">Settings</string>
    <string name="Bookmark">Bookmark</string>
    <string name="Save">Save</string>
    <string name="Search">Search</string>
    <string name="Share">Share</string>
    <string name="Delete">Delete</string>
    <string name="Preferences">Preferences</string>
    <string name="hello_world">hello_world</string>

    

</resources>
