<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item android:id="@+id/menu_bookmark"
          android:orderInCategory="1"
          android:title="@string/Bookmark" />
 
    <item android:id="@+id/menu_save"
          android:title="@string/Save" />
 
    <item android:id="@+id/menu_search"
          android:title="@string/Search" />
 
    <item android:id="@+id/menu_share"
          android:title="@string/Share" />
 
    <item android:id="@+id/menu_delete"
          android:title="@string/Delete" />  
 
<!--    <item android:id="@+id/menu_preferences"
          android:icon="@drawable/icon_preferences"
          android:title="Preferences" /> -->

</menu>
